# ProG

./: .amltignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  EB_backbone.py  EB_node_num.py  EB_pert_ratio.py  History.md  README.md  agent.py  amulet_plan_a.yaml  amulet_plan_a_cora_fixup.yaml  amulet_plan_b.yaml  amulet_plan_b_3shot.yaml  amulet_plan_b_fixup.yaml  batch_run_pretrain.py  bench.py  bench2allinone.py  config.py  create_excel_for_bench.py  data_preprocess.py  downstream_task.py  error_bound.py  load.py  meta_demo.py  no_meta_demo.py  node_edge.py  node_graph.py  parameters.py  pd.py  pipeline.py  pre_train.py  pyproject.toml  random_research.py  readthedocs.yaml  requirement.txt  results.xlsx
.github/: copilot-instructions.md
Docs/: IMPROVEMENTS.md  README.md  architecture.md  baseline_metrics.md  datasets.md  readthedocs.yaml  requirements.txt  running.md
ProG/: __init__.py  data.py  eva.py  meta.py  pre_train.py  prompt.py  utils.py
Tutorial/: README.md  downstream_task.ipynb  node_edge.py  node_graph.py  parameters  quickstart_progv2.py
configs/: cora_gpf.yaml  mutag_allinone.yaml  pubmed_gprompt.yaml
doc_new/: model.rst  pre_train.rst  utils.rst
multigprompt_model/: cora.multigprompt.GCL.128hidden_dim.pth
pre_trained_gnn/: ENZYMES.GraphCL.GCN.128hidden_dim.pth  MUTAG.SimGRACE.GCN.128hidden_dim.pth  PROTEINS.GraphCL.GCN.128hidden_dim.pth  PubMed.Edgepred_GPPT.GCN.128hidden_dim.pth  PubMed.Edgepred_Gprompt.GCN.128hidden_dim.pth  PubMed.GraphCL.GCN.128hidden_dim.pth  PubMed.SimGRACE.GCN.128hidden_dim.pth
prompt_graph/: __init__.py  defines.py
scripts/: GraphTask.sh  NodeTask.sh  amlt_shard_run.sh  baseline.sh  bench_full_grid.sh  bench_overall_performance.sh  benchmark_all_prompts.sh  bootstrap_excel_full.py  downstream_task.sh  gen_amulet_plan_a.py  gen_amulet_plan_a_cora_fixup.py  gen_amulet_plan_b.py  gen_amulet_plan_b_3shot.py  (+6 more)
(+268 files in other folders)
