[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prog"
version = "0.1.0"
description = "ProG: A Unified Library for Graph Prompt Learning"
requires-python = ">=3.9"
dependencies = [
    "torch>=1.13,<3",
    "torch_geometric",
    "ogb",
    "pandas",
    "openpyxl",
    "scikit-learn",
    "torchmetrics",
    "networkx",
    "numpy<2",
    "deprecated",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "pre-commit", "mypy"]
ogb = ["ogb", "outdated"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]

[tool.setuptools.packages.find]
where = ["."]
include = ["prompt_graph*"]
